---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2025-05-09
  Bugfixes:
    - Fixed compatibility for honeycomb fungus when playing with Spaghetorio mod
    - Fixed some locale typo
    - Fixed compatibility with factorio 2.0.44 with new gleba decoratives
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2025-04-18
  Changes:
    - Gleba tiles are much more prevalent in the south
    - New algorithm for spawning yumako and jellynut
    - Vulcane have a slightly different lava spot size
  Bugfixes:
    - Yumako and jellynut plants now will spawn with water disabled
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2025-03-21
  Changes:
    - Ores related to Nauvis will not spawn on ice
    - Lightning collectors are now hidden from player
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2025-03-14
  Changes:
    - Gleba tiles absorb pollution
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2025-02-19
  Modding:
    - Added space travel flag
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2025-02-02
  Bugfixes:
    - Now the menu simulations are fixed for good
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2025-01-30
  Bugfixes:
    - Removed some menu simulations which could crash the game
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2025-01-19
  Bugfixes:
    - Calcite and Tungsten ore wont spawn on ammonia oceans
  Modding: