@@ -8,8 +8,8 @@
     "factorio_version": "2.0",
     "space_travel_required": true,
     "dependencies": [
-        "base >= 2.0.43",
-        "space-age >= 2.0.43",
+        "base >= 2.0.47",
+        "space-age >= 2.0.47",
         "! naufulglebunusilo",
         "! rso-mod"
     ]
