@@ -3,16 +3,16 @@
 --------------------------------------------------------------------------------
 local terrain = require("map-generation.terrain")
 
-local util =
+local data_util =
 {
   table = {}
 }
 
-function util.spritesheets_to_pictures(spritesheets)
+function data_util.spritesheets_to_pictures(spritesheets)
   local pictures = {}
   for _, spritesheet in pairs(spritesheets) do
     for i = 1, spritesheet.frame_count or 1, 1 do
-      table.insert(pictures, util.sprite_load(spritesheet.path,
+      table.insert(pictures, data_util.sprite_load(spritesheet.path,
         {
           frame_index = i - 1,
           scale = spritesheet.scale or 0.5,
